--- a/app.json
+++ b/app.json
@@ -12,6 +12,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.l1tracker",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -19,10 +20,20 @@
       "edgeToEdgeEnabled": true
     },
     "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
+  "bundler": "metro",
+  "output": "static",
+  "favicon": "./assets/images/favicon.png",
+  "build": {
+    "babel": {
+      "include": ["expo-notifications"]
+    }
+  },
+  "config": {
+    "notification": {
+      "vapidPublicKey": "BKjuMwn7S-067GtIWPlY9Jg8b1jyi9_gob-E9P6h2a5r6nkEC4f0KTkwP31Wc0gVMHQeu8ziMXEi5v1TN7FgyxY"
+    }
+  }
+},
     "plugins": [
       "expo-router",
       [
